--- a/code/Makefile
+++ b/code/Makefile
@@ -10,10 +10,10 @@
 # FUSES ........ Parameters for avrdude to flash the fuses appropriately.
 
 FILE       = sous-vide
-DEVICE     = atmega32
+DEVICE     = atmega328p
 CLOCK      = 1000000
 PROGRAMMER = -c dragon_isp -P usb
-FUSES      = -U lfuse:w:0xe1:m -U hfuse:w:0xd9:m
+FUSES      = -U lfuse:w:0x62:m -U hfuse:w:0xd9:m
 # fuses set to disable jtag
 
 # Typically, no changes are required beyond this point.
